<resources>
    <string name="app_name">Cashino</string>
    <string name="main_activity_app_name">Cashino</string>
    <string name="textViewDescription">Sprawdź swoje szczęście!</string>
    <string name="textViewSchool">Wojskowa Akademia Techniczna</string>
    <string name="btnText">Zakręć!</string>
    <string name="loginEt">Login</string>
    <string name="menu_welcome">Witaj!</string>
    <string name="main_menu_about">O programie</string>
    <string name="about_activity_app_name">Cashino</string>
    <string name="about_activity_version">Wersja 1.0</string>
    <string name="about_activity_description">Wojskowa Akademia Techniczna</string>
    <string name="about_activity_authors">Autorzy:</string>
    <string name="passwordEt">Hasło</string>
    <string name="btnLogin">Zaloguj</string>
    <string name="open_navigation_bar">Open navigation bar</string>
    <string name="close_navigation_bar">Close navigation bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnRegister">Zarejestruj</string>
    <string name="saldoS">Saldo: </string>
    <string name="stawkaS">Stawka: </string>
    <string name="defStawka">20</string>
</resources>